# claude-pyhooks

./: pyproject.toml
src/claude_pyhooks/: __init__.py
